--- a/dist.ini
+++ b/dist.ini
@@ -19,6 +19,10 @@ repository.type = git
 
 [Test::Perl::Critic]
 [Test::PodSpelling]
+stopwords = exe
+stopwords = inflater 
+stopwords = CKAN
+stopwords = netkan
 
 [AutoPrereqs]
 
