Fix repo metadata

--- a/dist.ini
+++ b/dist.ini
@@ -11,7 +11,7 @@ fist_version = 0.01
 
 [MetaJSON]
 [MetaResources]
-repository.url  = git@github.com:KSP-CKAN/NetKAN-bot.git
+repository.url  = git://github.com/KSP-CKAN/NetKAN-bot
 repository.web  = https://github.com/KSP-CKAN/NetKAN-bot
 repository.type = git
 
