--- a/.travis.yml
+++ b/.travis.yml
@@ -20,9 +20,12 @@ install:
   - cpanm --quiet --notest Devel::Cover::Report::Coveralls
   - cpanm --quiet --notest Dist::Zilla::App::Command::cover
   - wget https://raw.githubusercontent.com/KSP-CKAN/CKAN/master/bin/ckan-validate.py
+  - wget https://raw.githubusercontent.com/KSP-CKAN/CKAN/master/CKAN.schema
   - chmod +x ckan-validate.py
   - python -V
+  - ./test.py
   - pip install --user json-schema-validator
+  - ls -lah ~/.local/lib/python2.7/site-packages/
 script:
   - dzil test -v
   - ./ckan-validate.py t/data/CKAN-meta-validate/DogeCoinFlag/DogeCoinFlag-v1.02.ckan
