--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,8 @@ before_install:
   - git config --global user.name "TravisCI"
 install:
   # Deal with all of the DZIL dependancies, quickly and quietly
-  - sudo apt-get install mono-complete libcurl4-openssl-dev
+  - sudo apt-get update
+  - sudo apt-get install mono-complete libcurl4-openssl-dev -y
   - pip install --user jsonschema
   - export PYTHONPATH=~/.local/lib/python2.7/site-package
   - cpanm --quiet --notest --skip-satisfied Dist::Zilla
