Stop dzil barfing with the zip file

--- a/dist.ini
+++ b/dist.ini
@@ -15,6 +15,10 @@ repository.url  = git://github.com/KSP-CKAN/NetKAN-bot
 repository.web  = https://github.com/KSP-CKAN/NetKAN-bot
 repository.type = git
 
+[Encoding]
+encoding = bytes
+match    = zip
+
 [@Basic]
 
 [Test::Perl::Critic]
