--- a/dist.ini
+++ b/dist.ini
@@ -33,6 +33,18 @@ stopwords = netkan
 stopwords = api
 stopwords = KSP
 stopwords = BaconLabs
+stopwords = CKANs
+stopwords = CreateURLHash
+stopwords = MirrorKAN
+stopwords = NetFileCache
+stopwords = ckans
+stopwords = cli
+stopwords = mediatype
+stopwords = Webhook
+stopwords = metapackage
+stopwords = webhooks
+stopwords = ckan
+stopwords = iaS
 
 [AutoPrereqs]
 
