Add stopwords for spelling

--- a/dist.ini
+++ b/dist.ini
@@ -45,6 +45,8 @@ stopwords = metapackage
 stopwords = webhooks
 stopwords = ckan
 stopwords = iaS
+stopwords = sha
+stopwords = mimetype
 
 [AutoPrereqs]
 
