--- a/dist.ini
+++ b/dist.ini
@@ -47,6 +47,9 @@ stopwords = ckan
 stopwords = iaS
 stopwords = sha
 stopwords = mimetype
+stopwords = kref
+stopwords = vref
+stopwords = untracked
 
 [AutoPrereqs]
 
