--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,6 @@ install:
   - cpanm --quiet --notest Dist::Zilla::App::Command::cover
 script:
   - git --version
-  - dzil test
+  - prove -lvr t/
 after_success:
   - dzil cover -outputdir cover_db -report coveralls
